@@ -1,14 +1,29 @@
 package com.w2w.api.scheduling;
 
-import com.w2w.api.position.dto.PositionDto;
+import com.w2w.api.category.CategoryService;
+import com.w2w.api.category.dto.CategorySummary;
+import com.w2w.api.scheduling.dto.CategoryTimingBucket;
+import com.w2w.api.position.PositionService;
+import com.w2w.api.position.dto.PositionSummary;
 import com.w2w.api.scheduling.dto.CreateShiftRequest;
-import com.w2w.api.scheduling.dto.UpdateShiftRequest; // Now a record
-import com.w2w.api.scheduling.dto.DayShiftBucketDto;
+import com.w2w.api.scheduling.dto.DayPositionBucket;
+import com.w2w.api.scheduling.dto.DayShiftBucket;
 import com.w2w.api.scheduling.dto.EmployeeShiftProjection;
-import com.w2w.api.scheduling.dto.EmployeeWithShiftsDto;
+import com.w2w.api.scheduling.dto.EmployeeSchedule;
+import com.w2w.api.scheduling.dto.PositionShiftBucket;
 import com.w2w.api.scheduling.dto.ShiftDetailsProjection;
-import com.w2w.api.scheduling.dto.ShiftDto; // Now a class
-import com.w2w.api.scheduling.dto.ShiftResponseDto;
+import com.w2w.api.scheduling.dto.ShiftResponse;
+import com.w2w.api.scheduling.dto.DayCategoryTimingBucket;
+import com.w2w.api.scheduling.dto.DayPositionTimingBucket;
+import com.w2w.api.scheduling.dto.DayShiftTimingBucket;
+import com.w2w.api.scheduling.dto.GroupedShiftsResponse;
+import com.w2w.api.scheduling.dto.PositionTimingBucket;
+import com.w2w.api.scheduling.dto.ShiftGroup;
+import com.w2w.api.scheduling.dto.ShiftGrouping;
+import com.w2w.api.scheduling.dto.ShiftSummary;
+import com.w2w.api.scheduling.dto.ShiftTimingBucket;
+import com.w2w.api.scheduling.dto.ShiftTimingGroup;
+import com.w2w.api.scheduling.dto.UpdateShiftRequest;
 import com.w2w.api.scheduling.model.Schedule;
 import com.w2w.api.scheduling.model.Shift;
 import org.junit.jupiter.api.BeforeEach;
@@ -27,7 +42,6 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq; // Import eq
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
@@ -36,6 +50,8 @@ class SchedulingServiceTest {
     private SchedulingQueryRepository schedulingQueryRepository;
     private ShiftRepository shiftRepository;
     private ScheduleRepository scheduleRepository;
+    private PositionService positionService;
+    private CategoryService categoryService;
     private SchedulingService schedulingService;
 
     @BeforeEach
@@ -43,23 +59,31 @@ class SchedulingServiceTest {
         schedulingQueryRepository = Mockito.mock(SchedulingQueryRepository.class);
         shiftRepository = Mockito.mock(ShiftRepository.class);
         scheduleRepository = Mockito.mock(ScheduleRepository.class);
+        positionService = Mockito.mock(PositionService.class);
+        categoryService = Mockito.mock(CategoryService.class);
         schedulingService = new SchedulingService();
         ReflectionTestUtils.setField(schedulingService, "schedulingQueryRepository", schedulingQueryRepository);
         ReflectionTestUtils.setField(schedulingService, "shiftRepository", shiftRepository);
         ReflectionTestUtils.setField(schedulingService, "scheduleRepository", scheduleRepository);
+        ReflectionTestUtils.setField(schedulingService, "positionService", positionService);
+        ReflectionTestUtils.setField(schedulingService, "categoryService", categoryService);
     }
 
     @Test
     void saveShiftCalculatesDurationAndOvernightStatus() {
         LocalDate date = LocalDate.of(2026, 3, 31);
-        CreateShiftRequest request = new CreateShiftRequest();
-        request.setEmployeeId(101);
-        request.setCompanyId(1);
-        request.setDate(date);
-        request.setStartTime(LocalTime.of(9, 0));
-        request.setEndTime(LocalTime.of(17, 0));
-        request.setPosition(1);
-        request.setColor("amber");
+        CreateShiftRequest request = new CreateShiftRequest(
+                101,
+                1,
+                null,
+                date,
+                LocalTime.of(9, 0),
+                LocalTime.of(17, 0),
+                null,
+                1,
+                null,
+                "amber"
+        );
 
         Schedule schedule = new Schedule();
         schedule.setScheduleId(500);
@@ -78,14 +102,18 @@ class SchedulingServiceTest {
     @Test
     void saveShiftAllowsBlankColor() {
         LocalDate date = LocalDate.of(2026, 3, 31);
-        CreateShiftRequest request = new CreateShiftRequest();
-        request.setEmployeeId(101);
-        request.setCompanyId(1);
-        request.setDate(date);
-        request.setStartTime(LocalTime.of(9, 0));
-        request.setEndTime(LocalTime.of(17, 0));
-        request.setPosition(1);
-        request.setColor("");
+        CreateShiftRequest request = new CreateShiftRequest(
+                101,
+                1,
+                null,
+                date,
+                LocalTime.of(9, 0),
+                LocalTime.of(17, 0),
+                null,
+                1,
+                null,
+                ""
+        );
 
         Schedule schedule = new Schedule();
         schedule.setScheduleId(500);
@@ -100,13 +128,18 @@ class SchedulingServiceTest {
     @Test
     void saveShiftCalculatesOvernightStatusCorrecty() {
         LocalDate date = LocalDate.of(2026, 3, 31);
-        CreateShiftRequest request = new CreateShiftRequest();
-        request.setEmployeeId(101);
-        request.setCompanyId(1);
-        request.setDate(date);
-        request.setStartTime(LocalTime.of(22, 0));
-        request.setEndTime(LocalTime.of(6, 0));
-        request.setPosition(1);
+        CreateShiftRequest request = new CreateShiftRequest(
+                101,
+                1,
+                null,
+                date,
+                LocalTime.of(22, 0),
+                LocalTime.of(6, 0),
+                null,
+                1,
+                null,
+                null
+        );
 
         Schedule schedule = new Schedule();
         schedule.setScheduleId(500);
@@ -122,13 +155,18 @@ class SchedulingServiceTest {
     @Test
     void saveShiftCreatesNewScheduleIfNotFound() {
         LocalDate date = LocalDate.of(2026, 3, 31);
-        CreateShiftRequest request = new CreateShiftRequest();
-        request.setEmployeeId(101);
-        request.setCompanyId(1);
-        request.setDate(date);
-        request.setStartTime(LocalTime.of(9, 0));
-        request.setEndTime(LocalTime.of(17, 0));
-        request.setPosition(1);
+        CreateShiftRequest request = new CreateShiftRequest(
+                101,
+                1,
+                null,
+                date,
+                LocalTime.of(9, 0),
+                LocalTime.of(17, 0),
+                null,
+                1,
+                null,
+                null
+        );
 
         when(scheduleRepository.findByCompanyIdAndStartDate(1, date)).thenReturn(Optional.empty());
         when(scheduleRepository.save(any(Schedule.class))).thenAnswer(invocation -> {
@@ -147,13 +185,18 @@ class SchedulingServiceTest {
     @Test
     void saveShiftCreatesUnpublishedScheduleByDefault() {
         LocalDate date = LocalDate.of(2026, 3, 31);
-        CreateShiftRequest request = new CreateShiftRequest();
-        request.setEmployeeId(101);
-        request.setCompanyId(1);
-        request.setDate(date);
-        request.setStartTime(LocalTime.of(9, 0));
-        request.setEndTime(LocalTime.of(17, 0));
-        request.setPosition(1);
+        CreateShiftRequest request = new CreateShiftRequest(
+                101,
+                1,
+                null,
+                date,
+                LocalTime.of(9, 0),
+                LocalTime.of(17, 0),
+                null,
+                1,
+                null,
+                null
+        );
 
         when(scheduleRepository.findByCompanyIdAndStartDate(1, date)).thenReturn(Optional.empty());
         when(scheduleRepository.save(any(Schedule.class))).thenAnswer(invocation -> {
@@ -165,7 +208,7 @@ class SchedulingServiceTest {
 
         schedulingService.saveShift(request);
 
-        org.mockito.ArgumentCaptor<Schedule> scheduleCaptor = org.mockito.ArgumentCaptor.forClass(Schedule.class);
+        ArgumentCaptor<Schedule> scheduleCaptor = ArgumentCaptor.forClass(Schedule.class);
         verify(scheduleRepository).save(scheduleCaptor.capture());
         assertEquals(false, scheduleCaptor.getValue().isPublished());
     }
@@ -173,13 +216,18 @@ class SchedulingServiceTest {
     @Test
     void saveShiftAlwaysDerivesOvernightFromTimes() {
         LocalDate date = LocalDate.of(2026, 3, 31);
-        CreateShiftRequest request = new CreateShiftRequest();
-        request.setEmployeeId(101);
-        request.setCompanyId(1);
-        request.setDate(date);
-        request.setStartTime(LocalTime.of(22, 0));
-        request.setEndTime(LocalTime.of(6, 0));
-        request.setPosition(1);
+        CreateShiftRequest request = new CreateShiftRequest(
+                101,
+                1,
+                null,
+                date,
+                LocalTime.of(22, 0),
+                LocalTime.of(6, 0),
+                null,
+                1,
+                null,
+                null
+        );
 
         Schedule schedule = new Schedule();
         schedule.setScheduleId(500);
@@ -195,18 +243,17 @@ class SchedulingServiceTest {
     @Test
     void updateShiftUpdatesFieldsAndRecalculates() {
         Integer shiftId = 1001;
-        // Use canonical constructor for UpdateShiftRequest record
         UpdateShiftRequest request = new UpdateShiftRequest(
-                shiftId, // shiftId
-                101, // employeeId
+                shiftId,
+                101,
                 "New description",
-                LocalTime.of(10, 0), // startTime
-                LocalTime.of(18, 0), // endTime
-                2, // position
-                null, // category
-                "amber", // color
-                null, // date
-                null // duration
+                LocalTime.of(10, 0),
+                LocalTime.of(18, 0),
+                2,
+                null,
+                "amber",
+                null,
+                null
         );
 
         Shift existingShift = new Shift();
@@ -219,16 +266,29 @@ class SchedulingServiceTest {
 
         when(shiftRepository.findById(shiftId)).thenReturn(Optional.of(existingShift));
         when(shiftRepository.save(any(Shift.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(shiftRepository.findShiftDetailsByShiftId(shiftId))
+                .thenReturn(Optional.of(new TestShiftDetailsProjection(
+                        shiftId,
+                        101,
+                        1,
+                        "New description",
+                        null,
+                        LocalTime.of(10, 0),
+                        LocalTime.of(18, 0),
+                        8.0f,
+                        false,
+                        "Bartender",
+                        "Front",
+                        "amber"
+                )));
 
-        Shift updated = schedulingService.updateShift(shiftId, request);
+        ShiftResponse updated = schedulingService.updateShift(shiftId, request);
 
-        assertEquals("New description", updated.getDescription());
-        assertEquals(LocalTime.of(10, 0), updated.getStartTime());
-        assertEquals(8.0f, updated.getDuration()); // duration calculated from start/end times
-        assertEquals(2, updated.getRequiredSkillId());
-        assertEquals("amber", updated.getColor());
-        assertEquals(null, updated.getScheduleId()); // no date was supplied, so schedule remains unchanged
-        assertEquals(101, updated.getChangedBy()); // changedBy updated from existingShift's employeeId
+        assertEquals("New description", updated.description());
+        assertEquals(LocalTime.of(10, 0), updated.startTime());
+        assertEquals(8.0f, updated.duration());
+        assertEquals("Bartender", updated.position());
+        assertEquals("amber", updated.color());
     }
 
     @Test
@@ -265,20 +325,20 @@ class SchedulingServiceTest {
                         ""
                 )));
 
-        ShiftResponseDto response = schedulingService.getShift(shiftId);
+        ShiftResponse response = schedulingService.getShift(shiftId);
 
-        assertEquals(shiftId, response.getShiftId());
-        assertEquals(101, response.getEmployeeId());
-        assertEquals(7, response.getCompanyId());
-        assertEquals("Opening shift", response.getDescription());
-        assertEquals(LocalDate.of(2026, 3, 31), response.getDate());
-        assertEquals(LocalTime.of(9, 0), response.getStartTime());
-        assertEquals(LocalTime.of(17, 0), response.getEndTime());
-        assertEquals(8.0f, response.getDuration());
-        assertEquals(false, response.getIsOvernight());
-        assertEquals("Bartender", response.getPosition());
-        assertEquals("Front", response.getCategory());
-        assertEquals("", response.getColor());
+        assertEquals(shiftId, response.shiftId());
+        assertEquals(101, response.employeeId());
+        assertEquals(7, response.companyId());
+        assertEquals("Opening shift", response.description());
+        assertEquals(LocalDate.of(2026, 3, 31), response.date());
+        assertEquals(LocalTime.of(9, 0), response.startTime());
+        assertEquals(LocalTime.of(17, 0), response.endTime());
+        assertEquals(8.0f, response.duration());
+        assertEquals(false, response.isOvernight());
+        assertEquals("Bartender", response.position());
+        assertEquals("Front", response.category());
+        assertEquals("", response.color());
         verifyNoInteractions(scheduleRepository);
     }
 
@@ -307,7 +367,7 @@ class SchedulingServiceTest {
                         "Ava",
                         "Stone",
                         List.of("111-222"),
-                        List.of(new PositionDto(12, "Bartender"), new PositionDto(19, "Server")),
+                        List.of(new PositionSummary(12, "Bartender"), new PositionSummary(19, "Server")),
                         LocalDate.of(2026, 3, 25),
                         LocalTime.of(9, 0),
                         LocalTime.of(17, 0),
@@ -319,25 +379,25 @@ class SchedulingServiceTest {
                         "amber"
                 )));
 
-        List<EmployeeWithShiftsDto> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
+        List<EmployeeSchedule> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
 
         assertEquals(1, result.size());
-        EmployeeWithShiftsDto employee = result.getFirst();
+        EmployeeSchedule employee = result.getFirst();
         assertEquals(2, employee.getAvailablePositions().size());
-        assertEquals(12, employee.getAvailablePositions().getFirst().getId());
-        assertEquals("Bartender", employee.getAvailablePositions().getFirst().getName());
+        assertEquals(12, employee.getAvailablePositions().getFirst().id());
+        assertEquals("Bartender", employee.getAvailablePositions().getFirst().name());
 
         assertEquals(3, employee.getWeeklyShifts().size());
-        assertEquals(startDate, employee.getWeeklyShifts().get(0).getDate());
-        assertEquals(startDate.plusDays(1), employee.getWeeklyShifts().get(1).getDate());
-        assertEquals(startDate.plusDays(2), employee.getWeeklyShifts().get(2).getDate());
+        assertEquals(startDate, employee.getWeeklyShifts().get(0).date());
+        assertEquals(startDate.plusDays(1), employee.getWeeklyShifts().get(1).date());
+        assertEquals(startDate.plusDays(2), employee.getWeeklyShifts().get(2).date());
 
-        DayShiftBucketDto firstBucket = employee.getWeeklyShifts().get(0);
-        assertEquals(1, firstBucket.getShifts().size());
-        assertEquals(9001, firstBucket.getShifts().getFirst().getShiftId());
-        assertEquals("amber", firstBucket.getShifts().getFirst().getColor());
-        assertTrue(employee.getWeeklyShifts().get(1).getShifts().isEmpty());
-        assertTrue(employee.getWeeklyShifts().get(2).getShifts().isEmpty());
+        DayShiftBucket firstBucket = employee.getWeeklyShifts().get(0);
+        assertEquals(1, firstBucket.shifts().size());
+        assertEquals(9001, firstBucket.shifts().getFirst().shiftId());
+        assertEquals("amber", firstBucket.shifts().getFirst().color());
+        assertTrue(employee.getWeeklyShifts().get(1).shifts().isEmpty());
+        assertTrue(employee.getWeeklyShifts().get(2).shifts().isEmpty());
         assertEquals(8.0, employee.getTotalHours());
         assertEquals(1, employee.getShiftCount());
     }
@@ -354,7 +414,7 @@ class SchedulingServiceTest {
                         "Ava",
                         "Stone",
                         List.of(),
-                        List.of(new PositionDto(12, "Bartender")),
+                        List.of(new PositionSummary(12, "Bartender")),
                         LocalDate.of(2026, 3, 26),
                         LocalTime.of(22, 0),
                         LocalTime.of(6, 0),
@@ -366,21 +426,21 @@ class SchedulingServiceTest {
                         "blue"
                 )));
 
-        List<EmployeeWithShiftsDto> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
+        List<EmployeeSchedule> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
 
-        EmployeeWithShiftsDto employee = result.getFirst();
+        EmployeeSchedule employee = result.getFirst();
         assertEquals(3, employee.getWeeklyShifts().size());
 
-        DayShiftBucketDto secondBucket = employee.getWeeklyShifts().get(1);
-        DayShiftBucketDto thirdBucket = employee.getWeeklyShifts().get(2);
+        DayShiftBucket secondBucket = employee.getWeeklyShifts().get(1);
+        DayShiftBucket thirdBucket = employee.getWeeklyShifts().get(2);
 
-        assertEquals(LocalDate.of(2026, 3, 26), secondBucket.getDate());
-        assertEquals(LocalDate.of(2026, 3, 27), thirdBucket.getDate());
-        assertEquals(1, secondBucket.getShifts().size());
-        assertEquals(1, thirdBucket.getShifts().size());
-        assertEquals(9002, secondBucket.getShifts().getFirst().getShiftId());
-        assertEquals("blue", secondBucket.getShifts().getFirst().getColor());
-        assertTrue(employee.getWeeklyShifts().get(1).getShifts().getFirst().getColor().length() > 0);
+        assertEquals(LocalDate.of(2026, 3, 26), secondBucket.date());
+        assertEquals(LocalDate.of(2026, 3, 27), thirdBucket.date());
+        assertEquals(1, secondBucket.shifts().size());
+        assertEquals(1, thirdBucket.shifts().size());
+        assertEquals(9002, secondBucket.shifts().getFirst().shiftId());
+        assertEquals("blue", secondBucket.shifts().getFirst().color());
+        assertTrue(employee.getWeeklyShifts().get(1).shifts().getFirst().color().length() > 0);
         assertEquals(8.0, employee.getTotalHours());
         assertEquals(1, employee.getShiftCount());
     }
@@ -409,16 +469,16 @@ class SchedulingServiceTest {
                         "charcoal"
                 )));
 
-        List<EmployeeWithShiftsDto> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
+        List<EmployeeSchedule> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
 
-        EmployeeWithShiftsDto employee = result.getFirst();
+        EmployeeSchedule employee = result.getFirst();
         assertNotNull(employee.getWeeklyShifts().get(0));
-        assertEquals(1, employee.getWeeklyShifts().get(0).getShifts().size());
-        assertEquals(9003, employee.getWeeklyShifts().get(0).getShifts().getFirst().getShiftId());
-        assertEquals("charcoal", employee.getWeeklyShifts().get(0).getShifts().getFirst().getColor());
-        assertTrue(employee.getWeeklyShifts().get(0).getShifts().getFirst().getColor().length() > 0);
-        assertTrue(employee.getWeeklyShifts().get(1).getShifts().isEmpty());
-        assertTrue(employee.getWeeklyShifts().get(2).getShifts().isEmpty());
+        assertEquals(1, employee.getWeeklyShifts().get(0).shifts().size());
+        assertEquals(9003, employee.getWeeklyShifts().get(0).shifts().getFirst().shiftId());
+        assertEquals("charcoal", employee.getWeeklyShifts().get(0).shifts().getFirst().color());
+        assertTrue(employee.getWeeklyShifts().get(0).shifts().getFirst().color().length() > 0);
+        assertTrue(employee.getWeeklyShifts().get(1).shifts().isEmpty());
+        assertTrue(employee.getWeeklyShifts().get(2).shifts().isEmpty());
         assertEquals(2.0, employee.getTotalHours());
         assertEquals(1, employee.getShiftCount());
     }
@@ -447,21 +507,555 @@ class SchedulingServiceTest {
                         null
                 )));
 
-        List<EmployeeWithShiftsDto> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
+        List<EmployeeSchedule> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
 
-        ShiftDto groupedShift = result.getFirst().getWeeklyShifts().get(0).getShifts().getFirst();
-        assertEquals(null, groupedShift.getShiftId());
-        assertEquals(null, groupedShift.getColor());
+        ShiftSummary groupedShift = result.getFirst().getWeeklyShifts().get(0).shifts().getFirst();
+        assertEquals(null, groupedShift.shiftId());
+        assertEquals(null, groupedShift.color());
     }
 
-    // Mock implementations for interfaces and records used in tests
+    @Test
+    void groupsShiftsByDateAndPositionAndInitializesEmptyDateBuckets() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 26);
+
+        when(positionService.getPositionsByCompanyId(7))
+                .thenReturn(List.of(
+                        new PositionSummary(12, "Bartender"),
+                        new PositionSummary(19, "Server")
+                ));
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(
+                        new TestProjection(
+                                9001,
+                                101,
+                                "Ava",
+                                "Stone",
+                                List.of("111-222"),
+                                List.of(new PositionSummary(12, "Bartender")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Bartender",
+                                "Front",
+                                "Opening shift",
+                                8.0f,
+                                "amber"
+                        ),
+                        new TestProjection(
+                                9002,
+                                102,
+                                "Ben",
+                                "Cole",
+                                List.of("333-444"),
+                                List.of(new PositionSummary(19, "Server")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(10, 0),
+                                LocalTime.of(18, 0),
+                                false,
+                                "Server",
+                                "Floor",
+                                "Lunch shift",
+                                8.0f,
+                                "blue"
+                        )
+                ));
+
+        List<DayPositionBucket> result = schedulingService.getShiftsGroupedByDateAndPosition(7, startDate, endDate);
+
+        assertEquals(2, result.size());
+        assertEquals(startDate, result.get(0).date());
+        assertEquals(2, result.get(0).shiftCount());
+        assertEquals(16.0f, result.get(0).totalDuration());
+        assertEquals(endDate, result.get(1).date());
+        assertEquals(0, result.get(1).shiftCount());
+        assertEquals(0.0f, result.get(1).totalDuration());
+        assertEquals(2, result.get(1).positions().size());
+        assertEquals("Bartender", result.get(1).positions().get(0).position());
+        assertEquals(0, result.get(1).positions().get(0).shiftCount());
+        assertEquals(0.0f, result.get(1).positions().get(0).totalDuration());
+        assertTrue(result.get(1).positions().get(0).shifts().isEmpty());
+        assertEquals("Server", result.get(1).positions().get(1).position());
+        assertEquals(0, result.get(1).positions().get(1).shiftCount());
+        assertEquals(0.0f, result.get(1).positions().get(1).totalDuration());
+        assertTrue(result.get(1).positions().get(1).shifts().isEmpty());
+
+        List<PositionShiftBucket> firstDayPositions = result.get(0).positions();
+        assertEquals(2, firstDayPositions.size());
+        assertEquals("Bartender", firstDayPositions.get(0).position());
+        assertEquals(1, firstDayPositions.get(0).shiftCount());
+        assertEquals(8.0f, firstDayPositions.get(0).totalDuration());
+        assertEquals(1, firstDayPositions.get(0).shifts().size());
+        assertEquals("Server", firstDayPositions.get(1).position());
+        assertEquals(1, firstDayPositions.get(1).shiftCount());
+        assertEquals(8.0f, firstDayPositions.get(1).totalDuration());
+        assertEquals(1, firstDayPositions.get(1).shifts().size());
+        assertEquals(101, firstDayPositions.get(0).shifts().getFirst().employeeId());
+        assertEquals("Ava", firstDayPositions.get(0).shifts().getFirst().firstName());
+        assertEquals("amber", firstDayPositions.get(0).shifts().getFirst().color());
+        assertEquals(102, firstDayPositions.get(1).shifts().getFirst().employeeId());
+        assertEquals("Lunch shift", firstDayPositions.get(1).shifts().getFirst().description());
+    }
+
+    @Test
+    void dateAndPositionGroupingSplitsOvernightShiftAcrossMatchingBuckets() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 26);
+
+        when(positionService.getPositionsByCompanyId(7))
+                .thenReturn(List.of(
+                        new PositionSummary(12, "Bartender"),
+                        new PositionSummary(19, "Server")
+                ));
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(new TestProjection(
+                        9003,
+                        101,
+                        "Ava",
+                        "Stone",
+                        List.of("111-222"),
+                        List.of(new PositionSummary(12, "Bartender")),
+                        LocalDate.of(2026, 3, 25),
+                        LocalTime.of(22, 0),
+                        LocalTime.of(6, 0),
+                        true,
+                        "Bartender",
+                        "Front",
+                        "Close",
+                        8.0f,
+                        "charcoal"
+                )));
+
+        List<DayPositionBucket> result = schedulingService.getShiftsGroupedByDateAndPosition(7, startDate, endDate);
+
+        assertEquals(2, result.size());
+        assertEquals(2, result.get(0).positions().size());
+        assertEquals(2, result.get(1).positions().size());
+        assertEquals(1, result.get(0).shiftCount());
+        assertEquals(1, result.get(1).shiftCount());
+        assertEquals(2.0f, result.get(0).totalDuration());
+        assertEquals(6.0f, result.get(1).totalDuration());
+        assertEquals("Bartender", result.get(0).positions().getFirst().position());
+        assertEquals(1, result.get(0).positions().getFirst().shiftCount());
+        assertEquals(2.0f, result.get(0).positions().getFirst().totalDuration());
+        assertEquals(1, result.get(0).positions().getFirst().shifts().size());
+        assertEquals(9003, result.get(0).positions().getFirst().shifts().getFirst().shiftId());
+        assertEquals(LocalTime.of(22, 0), result.get(0).positions().getFirst().shifts().getFirst().startTime());
+        assertEquals(LocalTime.MIDNIGHT, result.get(0).positions().getFirst().shifts().getFirst().endTime());
+        assertEquals(1, result.get(1).positions().getFirst().shiftCount());
+        assertEquals(6.0f, result.get(1).positions().getFirst().totalDuration());
+        assertEquals(1, result.get(1).positions().getFirst().shifts().size());
+        assertEquals(LocalTime.MIDNIGHT, result.get(1).positions().getFirst().shifts().getFirst().startTime());
+        assertEquals(LocalTime.of(6, 0), result.get(1).positions().getFirst().shifts().getFirst().endTime());
+        assertEquals("Server", result.get(0).positions().get(1).position());
+        assertEquals(0, result.get(0).positions().get(1).shiftCount());
+        assertEquals(0.0f, result.get(0).positions().get(1).totalDuration());
+        assertTrue(result.get(0).positions().get(1).shifts().isEmpty());
+        assertEquals("Server", result.get(1).positions().get(1).position());
+        assertEquals(0, result.get(1).positions().get(1).shiftCount());
+        assertEquals(0.0f, result.get(1).positions().get(1).totalDuration());
+        assertTrue(result.get(1).positions().get(1).shifts().isEmpty());
+    }
+
+    @Test
+    void dayPositionTimingGroupingGroupsShiftsByTimeWindow() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 26);
+
+        when(positionService.getPositionsByCompanyId(7))
+                .thenReturn(List.of(
+                        new PositionSummary(12, "Bartender"),
+                        new PositionSummary(19, "Server")
+                ));
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(
+                        new TestProjection(
+                                9001,
+                                101,
+                                "Ava",
+                                "Stone",
+                                List.of("111-222"),
+                                List.of(new PositionSummary(12, "Bartender")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Bartender",
+                                "Front",
+                                "Opening shift",
+                                8.0f,
+                                "amber"
+                        ),
+                        new TestProjection(
+                                9002,
+                                102,
+                                "Ben",
+                                "Cole",
+                                List.of("333-444"),
+                                List.of(new PositionSummary(19, "Server")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(10, 0),
+                                LocalTime.of(18, 0),
+                                false,
+                                "Server",
+                                "Floor",
+                                "Lunch shift",
+                                8.0f,
+                                "blue"
+                        )
+                ));
+
+        List<DayPositionTimingBucket> result = schedulingService.getShiftsGroupedByDayPositionAndTiming(7, startDate, endDate);
+
+        assertEquals(2, result.size());
+        assertEquals(1, result.get(0).positions().get(0).shiftTimings().size());
+        assertEquals(LocalTime.of(9, 0), result.get(0).positions().get(0).shiftTimings().getFirst().startTime());
+        assertEquals(LocalTime.of(17, 0), result.get(0).positions().get(0).shiftTimings().getFirst().endTime());
+        assertEquals(101, result.get(0).positions().get(0).shiftTimings().getFirst().shifts().getFirst().employeeId());
+        assertTrue(result.get(1).positions().get(0).shiftTimings().isEmpty());
+    }
+
+    @Test
+    void dayCategoryTimingGroupingGroupsShiftsByCategoryAndTimeWindow() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 26);
+
+        when(categoryService.getCategoriesByCompanyId(7))
+                .thenReturn(List.of(
+                        new CategorySummary(4, "Floor", "FL"),
+                        new CategorySummary(5, "Front", "FR")
+                ));
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(
+                        new TestProjection(
+                                9001,
+                                101,
+                                "Ava",
+                                "Stone",
+                                List.of("111-222"),
+                                List.of(new PositionSummary(12, "Bartender")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Bartender",
+                                "Front",
+                                "Opening shift",
+                                8.0f,
+                                "amber"
+                        ),
+                        new TestProjection(
+                                9002,
+                                102,
+                                "Ben",
+                                "Cole",
+                                List.of("333-444"),
+                                List.of(new PositionSummary(19, "Server")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(10, 0),
+                                LocalTime.of(18, 0),
+                                false,
+                                "Server",
+                                "Floor",
+                                "Lunch shift",
+                                8.0f,
+                                "blue"
+                        )
+                ));
+
+        List<DayCategoryTimingBucket> result = schedulingService.getShiftsGroupedByDayCategoryAndTiming(7, startDate, endDate);
+
+        assertEquals(2, result.size());
+        assertEquals(2, result.get(0).categories().size());
+        assertEquals("Floor", result.get(0).categories().get(0).category());
+        assertEquals(1, result.get(0).categories().get(0).shiftTimings().size());
+        assertEquals("Front", result.get(0).categories().get(1).category());
+        assertEquals(1, result.get(0).categories().get(1).shiftTimings().size());
+        assertTrue(result.get(1).categories().get(0).shiftTimings().isEmpty());
+        assertTrue(result.get(1).categories().get(1).shiftTimings().isEmpty());
+    }
+
+    @Test
+    void dayCategoryShortNameTimingGroupingUsesCategoryShortDescriptions() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 26);
+
+        when(categoryService.getCategoriesByCompanyId(7))
+                .thenReturn(List.of(
+                        new CategorySummary(1, "Floor", "FLR"),
+                        new CategorySummary(2, "Front", "FRT")
+                ));
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(
+                        new TestProjection(
+                                9001,
+                                101,
+                                "Ava",
+                                "Stone",
+                                List.of("111-222"),
+                                List.of(new PositionSummary(12, "Bartender")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Bartender",
+                                "Front",
+                                "Opening shift",
+                                8.0f,
+                                "amber"
+                        ),
+                        new TestProjection(
+                                9002,
+                                102,
+                                "Ben",
+                                "Cole",
+                                List.of("333-444"),
+                                List.of(new PositionSummary(19, "Server")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(10, 0),
+                                LocalTime.of(18, 0),
+                                false,
+                                "Server",
+                                "Floor",
+                                "Lunch shift",
+                                8.0f,
+                                "blue"
+                        )
+                ));
+
+        List<DayCategoryTimingBucket> result =
+                schedulingService.getShiftsGroupedByDayCategoryShortNameAndTiming(7, startDate, endDate);
+
+        assertEquals(2, result.size());
+        assertEquals(2, result.get(0).categories().size());
+        assertEquals("FLR", result.get(0).categories().get(0).category());
+        assertEquals(1, result.get(0).categories().get(0).shiftTimings().size());
+        assertEquals("FRT", result.get(0).categories().get(1).category());
+        assertEquals(1, result.get(0).categories().get(1).shiftTimings().size());
+        assertTrue(result.get(1).categories().get(0).shiftTimings().isEmpty());
+        assertTrue(result.get(1).categories().get(1).shiftTimings().isEmpty());
+    }
+
+    @Test
+    void getShiftsGrouped_returnsNormalizedPositionShiftTimingResponse() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 25);
+
+        when(positionService.getPositionsByCompanyId(7))
+                .thenReturn(List.of(new PositionSummary(12, "Bartender")));
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(
+                        new TestProjection(
+                                9001,
+                                101,
+                                "Ava",
+                                "Stone",
+                                List.of("111-222"),
+                                List.of(new PositionSummary(12, "Bartender")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Bartender",
+                                "Front",
+                                "Opening shift",
+                                8.0f,
+                                "amber"
+                        )
+                ));
+
+        GroupedShiftsResponse result =
+                schedulingService.getShiftsGrouped(7, startDate, endDate, ShiftGrouping.POSITION_SHIFT_TIMINGS);
+
+        assertEquals(1, result.dates().size());
+        assertEquals("Bartender", result.dates().getFirst().shiftGroups().getFirst().label());
+        assertEquals(1, result.dates().getFirst().shiftGroups().getFirst().shiftGroups().size());
+        assertEquals("9:00AM-5:00PM", result.dates().getFirst().shiftGroups().getFirst().shiftGroups().getFirst().label());
+        assertEquals(1, result.dates().getFirst().shiftGroups().getFirst().shiftGroups().getFirst().shifts().size());
+    }
+
+    @Test
+    void getShiftsGrouped_returnsNormalizedCategoryShortNameResponse() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 25);
+
+        when(categoryService.getCategoriesByCompanyId(7))
+                .thenReturn(List.of(new CategorySummary(2, "Front", "FRT")));
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(
+                        new TestProjection(
+                                9001,
+                                101,
+                                "Ava",
+                                "Stone",
+                                List.of("111-222"),
+                                List.of(new PositionSummary(12, "Bartender")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Bartender",
+                                "Front",
+                                "Opening shift",
+                                8.0f,
+                                "amber"
+                        )
+                ));
+
+        GroupedShiftsResponse result =
+                schedulingService.getShiftsGrouped(7, startDate, endDate, ShiftGrouping.CAT_SHIFT_TIMINGS);
+
+        ShiftGroup categoryGroup = result.dates().getFirst().shiftGroups().getFirst();
+        assertEquals("FRT", categoryGroup.label());
+        assertEquals(1, categoryGroup.shiftGroups().size());
+        assertEquals("9:00AM-5:00PM", categoryGroup.shiftGroups().getFirst().label());
+        assertEquals(1, categoryGroup.shiftGroups().getFirst().shifts().size());
+    }
+
+    @Test
+    void dayShiftTimingGroupingGroupsShiftsByTimeWindowWithoutAggregates() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 26);
+
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(
+                        new TestProjection(
+                                9001,
+                                101,
+                                "Ava",
+                                "Stone",
+                                List.of("111-222"),
+                                List.of(new PositionSummary(12, "Bartender")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Bartender",
+                                "Front",
+                                "Opening shift",
+                                8.0f,
+                                "amber"
+                        ),
+                        new TestProjection(
+                                9002,
+                                102,
+                                "Ben",
+                                "Cole",
+                                List.of("333-444"),
+                                List.of(new PositionSummary(19, "Server")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Server",
+                                "Floor",
+                                "Lunch shift",
+                                8.0f,
+                                "blue"
+                        )
+                ));
+
+        List<DayShiftTimingBucket> result = schedulingService.getShiftsGroupedByDayAndTiming(7, startDate, endDate);
+
+        assertEquals(2, result.size());
+        assertEquals(startDate, result.get(0).date());
+        assertEquals(1, result.get(0).shiftTimings().size());
+        assertEquals("9:00AM-5:00PM", result.get(0).shiftTimings().getFirst().label());
+        assertEquals(2, result.get(0).shiftTimings().getFirst().shifts().size());
+        assertTrue(result.get(1).shiftTimings().isEmpty());
+    }
+
+    @Test
+    void dayShiftTimingGroupingOrdersBucketsByTimeNotPosition() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 25);
+
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(
+                        new TestProjection(
+                                9001,
+                                101,
+                                "Ava",
+                                "Stone",
+                                List.of("111-222"),
+                                List.of(new PositionSummary(12, "Bartender")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(10, 0),
+                                LocalTime.of(18, 0),
+                                false,
+                                "Bartender",
+                                "Front",
+                                "Late shift",
+                                8.0f,
+                                "amber"
+                        ),
+                        new TestProjection(
+                                9002,
+                                102,
+                                "Ben",
+                                "Cole",
+                                List.of("333-444"),
+                                List.of(new PositionSummary(19, "Server")),
+                                LocalDate.of(2026, 3, 25),
+                                LocalTime.of(9, 0),
+                                LocalTime.of(17, 0),
+                                false,
+                                "Server",
+                                "Floor",
+                                "Early shift",
+                                8.0f,
+                                "blue"
+                        )
+                ));
+
+        List<DayShiftTimingBucket> result = schedulingService.getShiftsGroupedByDayAndTiming(7, startDate, endDate);
+
+        assertEquals(2, result.getFirst().shiftTimings().size());
+        assertEquals("9:00AM-5:00PM", result.getFirst().shiftTimings().get(0).label());
+        assertEquals("10:00AM-6:00PM", result.getFirst().shiftTimings().get(1).label());
+    }
+
+    @Test
+    void includesUnassignedShiftsInGroupedResults() {
+        LocalDate startDate = LocalDate.of(2026, 3, 25);
+        LocalDate endDate = LocalDate.of(2026, 3, 25);
+
+        when(schedulingQueryRepository.findAllEmployeeShiftsInRange(7, startDate.minusDays(1), endDate))
+                .thenReturn(List.of(new TestProjection(
+                        9005,
+                        null, // Unassigned
+                        null,
+                        null,
+                        List.of(),
+                        List.of(),
+                        LocalDate.of(2026, 3, 25),
+                        LocalTime.of(9, 0),
+                        LocalTime.of(17, 0),
+                        false,
+                        "Bartender",
+                        "Front",
+                        "Open Shift",
+                        8.0f,
+                        "gray"
+                )));
+
+        List<EmployeeSchedule> result = schedulingService.getEmployeeShiftsGroupedInRange(7, startDate, endDate);
+
+        assertEquals(1, result.size());
+        EmployeeSchedule unassignedEntry = result.getFirst();
+        assertEquals(null, unassignedEntry.getEmployeeId());
+        assertEquals(1, unassignedEntry.getWeeklyShifts().get(0).shifts().size());
+        assertEquals(9005, unassignedEntry.getWeeklyShifts().get(0).shifts().getFirst().shiftId());
+    }
+
     private record TestProjection(
             Integer shiftId,
             Integer employeeId,
             String firstName,
             String lastName,
             List<String> phones,
-            List<PositionDto> availablePositions,
+            List<PositionSummary> availablePositions,
             LocalDate weekCommencing,
             LocalTime startTime,
             LocalTime endTime,
@@ -483,7 +1077,7 @@ class SchedulingServiceTest {
         @Override
         public List<String> getPhones() { return phones; }
         @Override
-        public List<PositionDto> getAvailablePositions() { return availablePositions; }
+        public List<PositionSummary> getAvailablePositions() { return availablePositions; }
         @Override
         public LocalDate getWeekCommencing() { return weekCommencing; }
         @Override
